--- a/index.html
+++ b/index.html
@@ -6742,8 +6742,8 @@ data-styled-pfs.g346[id="pfs__sc-1chonea-0"]{content:"cxfgXE,"}/*!sc*/
                                       <div data-testid="listing-attribution-overview"><span
                                           class="Text-c11n-8-100-2__sc-aiai24-0 kRaFxG"><br>
                                         </span></div>
-                                      <img src="file:///C:/Users/braxt/Downloads/georgia.png"
-                                        style="width: 783px; height: 587px;"> </div>
+                                      <img src="https://i.imgur.com/VJynGyk.png">
+                                    </div>
                                   </div>
                                 </div>
                               </div>
