--- a/index.html
+++ b/index.html
@@ -5222,7 +5222,7 @@ button.close-lightbox-button {
   vertical-align: super;
   font-size: 8px;
 }
-</style><title>Somewhere In Georgia</title>
+</style><title>3312 NE Nehalem Ave, Albany, OR 97321 | Zillow</title>
     <meta name="description" content="Zillow has 89 photos of this $799,000 3 beds, 2 baths, 2,133 Square Feet single family home located at 3312 NE Nehalem Ave, Albany, OR 97321 built in 2017.">
     <meta name="author" content="Zillow, Inc.">
     <meta name="Copyright" content="Copyright (c) 2006-2024 Zillow, Inc.">
@@ -6369,7 +6369,7 @@ data-styled-pfs.g346[id="pfs__sc-1chonea-0"]{content:"cxfgXE,"}/*!sc*/
                                       focusable="false" role="img"><path stroke="none"
                                         d="M29.7 8.8a1 1 0 00-1.4 0L16 21 3.7 8.8a1 1 0 00-1.4 0 1 1 0 000 1.4l13 13a1 1 0 001.4 0l13-13a1 1 0 000-1.4z"></path></svg></span>
                                   <div class="Spacer-c11n-8-100-2__sc-17suqs2-0 cwlutN">Back
-                                    to search</div>
+                                    to se<a href="https://www.zillow.com"></a>arch</div>
                                 </button></span></div>
                             <svg viewBox="0 0 1911 400" data-testid="zillow-logo"
                               class="StyledZillowLogo-c11n-8-100-2__sc-yc584g-0 dwLFpq sc-kOjCZu bDHdVE"><g
@@ -6580,7 +6580,7 @@ data-styled-pfs.g346[id="pfs__sc-1chonea-0"]{content:"cxfgXE,"}/*!sc*/
                                       class="Text-c11n-8-105-0__sc-aiai24-0 PersonalizedPaymentChip__StyledEstPayment-zgmi__sc-acoh6y-2 jYpJNJ GprOW"><strong
                                         type="button" aria-expanded="false" aria-haspopup="dialog"
                                         class="TriggerText-c11n-8-105-0__sc-d96jze-0 jwAECO">Est.</strong><strong>:&nbsp;</strong>
-                                      0.02/mo&nbsp; </span><button class="StyledTextButton-c11n-8-105-0__sc-1nwmfqo-0 ceVzR PersonalizedPaymentChip__StyledTextButton-zgmi__sc-acoh6y-0 hjstiL">Get
+                                      £0.02/mo&nbsp; </span><button class="StyledTextButton-c11n-8-105-0__sc-1nwmfqo-0 ceVzR PersonalizedPaymentChip__StyledTextButton-zgmi__sc-acoh6y-0 hjstiL">Get
                                       pre-qualified</button></div>
                                 </div>
                               </div>
@@ -6660,7 +6660,7 @@ data-styled-pfs.g346[id="pfs__sc-1chonea-0"]{content:"cxfgXE,"}/*!sc*/
                                           class="StyledTag-c11n-8-100-2__sc-1stu7t-0 eMkPwC styles__StyledTag-fshdp-8-100-2__sc-3zcye6-1 huQTpf">Diverse
                                           community</span><span role="listitem"
                                           aria-label="Expansive great room" class="StyledTag-c11n-8-100-2__sc-1stu7t-0 eMkPwC styles__StyledTag-fshdp-8-100-2__sc-3zcye6-1 huQTpf">Natural
-                                          HVAC system</span><span role="listitem"
+                                          HVAC systeM</span><span role="listitem"
                                           aria-label="Walk in pantry" class="StyledTag-c11n-8-100-2__sc-1stu7t-0 eMkPwC styles__StyledTag-fshdp-8-100-2__sc-3zcye6-1 huQTpf"><br>
                                         </span></div>
                                     </div>
@@ -6727,6 +6727,9 @@ data-styled-pfs.g346[id="pfs__sc-1chonea-0"]{content:"cxfgXE,"}/*!sc*/
                                                   data-testid="listing-agent-contact-link"
                                                   class="Anchor-c11n-8-100-2__sc-hn4bge-0 sc-ijk2dc-0 qwogg hpPGLe">James
                                                   Ogle</button><a href="https://en.wikipedia.org/wiki/James_Oglethorpe"></a><button
+                                                  data-testid="listing-agent-contact-link"
+                                                  class="Anchor-c11n-8-100-2__sc-hn4bge-0 sc-ijk2dc-0 qwogg hpPGLe"></button><a
+                                                  href="https://en.wikipedia.org/wiki/James_Oglethorpe"></a><button
                                                   data-testid="listing-agent-contact-link"
                                                   class="Anchor-c11n-8-100-2__sc-hn4bge-0 sc-ijk2dc-0 qwogg hpPGLe">thorpe</button>&nbsp;<span
                                                   class="Text-c11n-8-100-2__sc-aiai24-0 bSfDch"></span></p>
@@ -7059,19 +7062,19 @@ data-styled-pfs.g346[id="pfs__sc-1chonea-0"]{content:"cxfgXE,"}/*!sc*/
                               cities</h2>
                             <div class="Text-c11n-8-100-2__sc-aiai24-0 styles__StyledText-fshdp-8-100-2__sc-1msbtd7-1 bSfDch bPUAEE footer-column-wrapper-body">
                               <ul>
-                                <li><a href="/albany-or/" class="styles__StyledRegionLink-fshdp-8-100-2__sc-1msbtd7-6 fWOHQe">Ebenezer
+                                <li><a href="https://www.zillow.com" class="styles__StyledRegionLink-fshdp-8-100-2__sc-1msbtd7-6 fWOHQe">Ebenezer
                                     Real estate</a></li>
-                                <li><a href="/brownsville-or/" class="styles__StyledRegionLink-fshdp-8-100-2__sc-1msbtd7-6 fWOHQe">New
+                                <li><a href="https://www.zillow.com" class="styles__StyledRegionLink-fshdp-8-100-2__sc-1msbtd7-6 fWOHQe">New
                                     Ebenezer Real estate</a></li>
-                                <li><a href="/halsey-or/" class="styles__StyledRegionLink-fshdp-8-100-2__sc-1msbtd7-6 fWOHQe">Darien
+                                <li><a href="https://www.zillow.com" class="styles__StyledRegionLink-fshdp-8-100-2__sc-1msbtd7-6 fWOHQe">Darien
                                     Real estate</a></li>
-                                <li><a href="/harrisburg-or/" class="styles__StyledRegionLink-fshdp-8-100-2__sc-1msbtd7-6 fWOHQe">Frederica
+                                <li><a href="https://www.zillow.com" class="styles__StyledRegionLink-fshdp-8-100-2__sc-1msbtd7-6 fWOHQe">Frederica
                                     Real estate</a></li>
-                                <li><a href="/lebanon-or/" class="styles__StyledRegionLink-fshdp-8-100-2__sc-1msbtd7-6 fWOHQe">Sunbury
+                                <li><a href="https://www.zillow.com" class="styles__StyledRegionLink-fshdp-8-100-2__sc-1msbtd7-6 fWOHQe">Sunbury
                                     Real estate</a></li>
-                                <li><a href="/lyons-or/" class="styles__StyledRegionLink-fshdp-8-100-2__sc-1msbtd7-6 fWOHQe">Augusta
+                                <li><a href="https://www.zillow.com" class="styles__StyledRegionLink-fshdp-8-100-2__sc-1msbtd7-6 fWOHQe">Augusta
                                     Real estate</a></li>
-                                <li><a href="/scio-or/" class="styles__StyledRegionLink-fshdp-8-100-2__sc-1msbtd7-6 fWOHQe">Abercorn
+                                <li><a href="https://www.zillow.com" class="styles__StyledRegionLink-fshdp-8-100-2__sc-1msbtd7-6 fWOHQe">Abercorn
                                     Real estate</a></li>
                                 <li><br>
                                 </li>
@@ -7089,32 +7092,30 @@ data-styled-pfs.g346[id="pfs__sc-1chonea-0"]{content:"cxfgXE,"}/*!sc*/
                                   <nav class="pfs__sc-1i1gn38-0 eTDEYX">
                                     <ul data-za-category="Navigation" data-za-action="Footer"
                                       class="pfs__sc-1kahb5i-0 daFyfs">
-                                      <li><a href="/z/corp/about/" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
+                                      <li><a href="https://www.zillow.com" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
                                           tabindex="0" data-za-category="!inherit"
                                           data-za-action="!inherit" data-za-label="About">About</a></li>
-                                      <li><a href="/z/zestimate/" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
+                                      <li><a href="https://www.zillow.com" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
                                           tabindex="0" data-za-category="!inherit"
                                           data-za-action="!inherit" data-za-label="Zestimates">Zestimates</a></li>
-                                      <li><a href="/research/" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
+                                      <li><a href="https://www.zillow.com" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
                                           tabindex="0" data-za-category="!inherit"
                                           data-za-action="!inherit" data-za-label="Research">Research</a></li>
-                                      <li><a href="/careers/" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
+                                      <li><a href="https://www.zillow.com" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
                                           tabindex="0" data-za-category="!inherit"
                                           data-za-action="!inherit" data-za-label="Careers">Careers</a></li>
-                                      <li><a href="/careers/disclosure/" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
+                                      <li><a href="https://www.zillow.com" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
                                           tabindex="0" data-za-category="!inherit"
                                           data-za-action="!inherit" data-za-label="Careers - U.S. Privacy Notice">Careers
                                           - U.S. Privacy Notice</a></li>
-                                      <li><a href="/careers/privacy-notice-zillow-mexico/"
-                                          class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
+                                      <li><a href="https://www.zillow.com" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
                                           tabindex="0" data-za-category="!inherit"
                                           data-za-action="!inherit" data-za-label="Careers - Mexico Privacy Notice">Careers
                                           - Mexico Privacy Notice</a></li>
-                                      <li><a href="https://zillow.zendesk.com/hc/en-us"
-                                          class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
+                                      <li><a href="https://www.zillow.com" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
                                           tabindex="0" data-za-category="!inherit"
                                           data-za-action="!inherit" data-za-label="Help">Help</a></li>
-                                      <li><a href="/z/partners/advertise/" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
+                                      <li><a href="https://www.zillow.com" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
                                           tabindex="0" data-za-category="!inherit"
                                           data-za-action="!inherit" data-za-label="Advertise">Advertise</a></li>
                                       <li><a href="https://www.zillow.com/rental-manager/resources/fair-housing-guide/"
@@ -7126,7 +7127,7 @@ data-styled-pfs.g346[id="pfs__sc-1chonea-0"]{content:"cxfgXE,"}/*!sc*/
                                           class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
                                           tabindex="0" data-za-category="!inherit"
                                           data-za-action="!inherit" data-za-label="Advocacy">Advocacy</a></li>
-                                      <li><a href="/z/corp/terms/" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
+                                      <li><a href="https://www.zillow.com" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
                                           tabindex="0" data-za-category="!inherit"
                                           data-za-action="!inherit" data-za-label="Terms of use">Terms
                                           of use</a></li>
@@ -7139,13 +7140,13 @@ data-styled-pfs.g346[id="pfs__sc-1chonea-0"]{content:"cxfgXE,"}/*!sc*/
                                           tabindex="0" data-za-category="!inherit"
                                           data-za-action="!inherit" data-za-label="Cookie Preference">Cookie
                                           Preference</a></li>
-                                      <li><a href="/blog/" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
+                                      <li><a href="https://www.zillow.com" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
                                           tabindex="0" data-za-category="!inherit"
                                           data-za-action="!inherit" data-za-label="Blog">Blog</a></li>
-                                      <li><a href="/tech/" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
+                                      <li><a href="https://www.zillow.com" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
                                           tabindex="0" data-za-category="!inherit"
                                           data-za-action="!inherit" data-za-label="AI">AI</a></li>
-                                      <li><a href="/z/buying/app-download/" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
+                                      <li><a href="https://www.zillow.com" class="StyledTextButton-c11n-8-100-2__sc-1nwmfqo-0 jKCdUX"
                                           tabindex="0" data-za-category="!inherit"
                                           data-za-action="!inherit" data-za-label="Mobile Apps">Mobile
                                           Apps</a></li>
@@ -7200,23 +7201,23 @@ data-styled-pfs.g346[id="pfs__sc-1chonea-0"]{content:"cxfgXE,"}/*!sc*/
                                   <div class="pfs__sc-1sj5qgb-0 eQDVAr">
                                     <p class="Text-c11n-8-100-2__sc-aiai24-0 kGqQoZ">Zillow,
                                       Inc. holds real estate brokerage<!-- --> <a
-                                        href="/z/info/real-estate-licenses/" class="Anchor-c11n-8-100-2__sc-hn4bge-0 erQHCh">licenses</a>
+                                        href="https://www.zillow.com" class="Anchor-c11n-8-100-2__sc-hn4bge-0 erQHCh">licenses</a>
                                       in multiple states. Zillow (Canada), Inc.
-                                      holds real estate brokerage<!-- --> <a href="/z/info/real-estate-licenses/"
+                                      holds real estate brokerage<!-- --> <a href="https://www.zillow.com"
                                         class="Anchor-c11n-8-100-2__sc-hn4bge-0 erQHCh">licenses</a>
                                       in multiple provinces.<br>
-                                      <a href="https://s.zillowstatic.com/pfs/static/SOP_NYS_10-4-23.pdf"
-                                        rel="nofollow" class="Anchor-c11n-8-100-2__sc-hn4bge-0 erQHCh">§
+                                      <a href="https://www.zillow.com" rel="nofollow"
+                                        class="Anchor-c11n-8-100-2__sc-hn4bge-0 erQHCh">§
                                         442-H New York Standard Operating
                                         Procedures</a><br>
-                                      <a href="https://s.zillowstatic.com/pfs/static/fairhousingnotice_10-4-23.pdf"
-                                        rel="nofollow" class="Anchor-c11n-8-100-2__sc-hn4bge-0 erQHCh">§
+                                      <a href="https://www.zillow.com" rel="nofollow"
+                                        class="Anchor-c11n-8-100-2__sc-hn4bge-0 erQHCh">§
                                         New York Fair Housing Notice</a><br>
-                                      TREC:<!-- --> <a href="https://s.zillowstatic.com/pfs/static/TREC_ZINC_10-4-23.pdf"
+                                      TREC:<!-- --> <a href="https://www.zillow.com"
                                         rel="nofollow" class="Anchor-c11n-8-100-2__sc-hn4bge-0 erQHCh">Information
                                         about brokerage services</a>,<!-- --> <a
-                                        href="https://www.trec.texas.gov/forms/consumer-protection-notice"
-                                        rel="nofollow" class="Anchor-c11n-8-100-2__sc-hn4bge-0 erQHCh">Consumer
+                                        href="https://www.zillow.com" rel="nofollow"
+                                        class="Anchor-c11n-8-100-2__sc-hn4bge-0 erQHCh">Consumer
                                         protection notice</a><br>
                                       California DRE #1522444<a href="https://www.zillow.com/z/info/contact-us/"
                                         class="Anchor-c11n-8-100-2__sc-hn4bge-0 pfs__chkjii-0 erQHCh jkCZYU">Contact
